# my_portfolio

./: .gitignore  README.md
cpp_projects/address_book_application/: README.md
cpp_projects/address_book_application/src/: address_book_application.cpp
cpp_projects/address_book_application/testcases/: testcases.txt
cpp_projects/tic_tac_toe_games/src/: 3x3X_O.h  BoardGame_Classes.h  CMakeLists.txt  Four_by_four_tic_tac_toe.h  Four_in_a_row.h  Misere_X_O.h  Numerical_tic_tac_toe.h  TIC_TAC.h  X_O_5x5.h  X_O_9x9.h  main.cpp  word_X_O.h
cpp_projects/vole_machine_simulator/src/: ALU.cpp  ALU.h  CPU.cpp  CPU.h  Instructions.cpp  Instructions.h  Memory.cpp  Memory.h  Register.cpp  Register.h  VoleMachine.cpp  VoleMachine.h  main.cpp
cpp_projects/vole_machine_simulator/testcases/: testcase1.txt  testcases2.txt
java_projects/cipher_program/src/: AtBashCipher.java  Cipher.java  Main.java  SimpleSubstitutionCipher.java  XORCipher.java
python_projects/binary_operations_calculator/src/: binary_operations_calculator.py
python_projects/number_converter_calculator/src/: number_converter_calculator.py
